# retro-clock

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config
schematics/nixie_clock/: nixie_clock-cache.lib  nixie_clock.kicad_prl  nixie_clock.kicad_pro  nixie_clock.kicad_sch  nixie_clock.sch  nixie_clock.sch-bak  nixie_z574m.lib
schematics/nixie_power/: nixie_power-cache.lib  nixie_power-rescue.lib  nixie_power.kicad_pcb  nixie_power.kicad_pcb-bak  nixie_power.kicad_prl  nixie_power.kicad_pro  nixie_power.kicad_sch  nixie_power.net  nixie_power.pro  nixie_power.sch  sym-lib-table
schematics/nixie_power/gerber/: nixie_power-B_Cu.gbr  nixie_power-B_Mask.gbr  nixie_power-B_Paste.gbr  nixie_power-B_SilkS.gbr  nixie_power-Edge_Cuts.gbr  nixie_power-F_Cu.gbr  nixie_power-F_Mask.gbr  nixie_power-F_Paste.gbr  nixie_power-F_SilkS.gbr  nixie_power-NPTH.drl  nixie_power-PTH.drl  nixie_power-job.gbrjob
schematics/nixie_stand/: fp-info-cache  nixie_stand-cache.lib  nixie_stand-rescue.lib  nixie_stand.kicad_pcb  nixie_stand.kicad_pcb-bak  nixie_stand.kicad_prl  nixie_stand.kicad_pro  nixie_stand.kicad_sch  nixie_stand.net  nixie_stand.pro  nixie_stand.sch  nixie_stand.sch-bak  nixie_z574m.lib  sym-lib-table
schematics/nixie_stand/gerber/: nixie_stand-B_Cu.gbr  nixie_stand-B_Mask.gbr  nixie_stand-B_Paste.gbr  nixie_stand-B_SilkS.gbr  nixie_stand-Edge_Cuts.gbr  nixie_stand-F_Cu.gbr  nixie_stand-F_Mask.gbr  nixie_stand-F_Paste.gbr  nixie_stand-F_SilkS.gbr  nixie_stand-NPTH.drl  nixie_stand-PTH.drl  (+1 more)
src/: clock.rs  display.rs  error.rs  gui.rs  main.rs  nixie.rs
