[package]
name = "retro_clock"
version = "0.1.0"
authors = ["VersBinarii <versbinarii@gmail.com>"]
edition = "2018"

[profile.release.package."*"]
opt-level = "z" 

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"


[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
nb = "1"
panic-halt = "0.2.0"
cortex-m-rtic = "1.0.0"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
heapless = {version = "0.7.7", features = ["ufmt-impl"]}
bme280 = {git = "https://github.com/VersBinarii/bme280-rs", features=["ufmt-impl"]}
ufmt = "0.1.0"

[dependencies.stm32f1xx-hal]
version = "0.9"
features = ["stm32f103", "medium", "rt"]
